--- a/src/popup.html
+++ b/src/popup.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.5/css/calcite-web.min.css">
+  </head>
   <body>
+    <div id="popup-container">
+      <div class="loader is-active padding-leader-3 padding-trailer-3">
+        <div class="loader-bars"></div>
+        <div class="loader-text">Loading...</div>
+      </div>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
