--- a/src/popup.html
+++ b/src/popup.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.5/css/calcite-web.min.css">
+    <style>
+      #popup-container {
+        width: 500px;
+        height: 500px;
+      }
+    </style>
   </head>
   <body>
-    <div id="popup-container">
-      <div class="loader is-active padding-leader-3 padding-trailer-3">
-        <div class="loader-bars"></div>
-        <div class="loader-text">Loading...</div>
-      </div>
-    </div>
     <script src="./index.js"></script>
   </body>
 </html>
