Site listing component

--- a/src/popup.html
+++ b/src/popup.html
@@ -12,7 +12,7 @@
         </div>
       </div>
     </div>
-    <iframe id="sandbox" src="./sandbox.html" height="0" width="0"></iframe>
+    <iframe id="sandbox" src="./sandbox.html" style="display:none"></iframe>
     <script src="./index.js"></script>
   </body>
 </html>
